# SafeSpace-AI-2.0

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  _README_bak.md  app.py  debug_therapist.py  deploy_to_hf.py  docker-compose.yml  hf_app.py  pyproject.toml  railway.toml  requirements.txt
agents/: crew.py  doctor.py  intent_classifier.py  safety.py  therapist.py
core/: config.py  engine.py  schemas.py
interfaces/streamlit_ui/: app.py
interfaces/whatsapp/: sender.py  webhook.py
mcp_server/: therapist_directory.py
memory/: store.py
multimodal/: speech.py  vision.py
observability/: tracer.py
tools/: emergency_tool.py  maps_tool.py
