
[project]
name = "ai-safespace-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "crewai>=1.14.4",
    "crewai-tools>=1.14.4",
    "fastapi>=0.136.1",
    "googlemaps>=4.10.0",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.13.0",
    "langsmith>=0.8.0",
    "litellm>=1.83.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "twilio>=9.10.5",
    "uvicorn>=0.46.0",
]
